finally proper datagen